fixes extra spacing in TOC elements that are uls

--- a/static/css/edu.css
+++ b/static/css/edu.css
@@ -46,3 +46,13 @@ body, button, input, textarea {
 .sectionTitle {
   padding-top: 1em;
 }
+
+ul, ol {
+	line-height: 1.6em;
+	padding-left: 2em;
+	margin-bottom: 0em;
+}
+
+li.last-item {
+  margin-bottom: 1em;
+}
